ver 1.02 -changed mail-server from ip to dns-name -change java version from 8 to 11
Signed-off-by: AlexLX2 <kolosoff.alex@gmail.com>